--- a/cloud-eureka-server7001/pom.xml
+++ b/cloud-eureka-server7001/pom.xml
@@ -17,10 +17,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
         </dependency>
-        <!-- 引用自己定义的api通用包，可以使用Payment支付Entity -->
+        <!-- 引用自己定义的api通用包，可以使用Payment支付Entity，添加版本号-->
         <dependency>
             <groupId>com.alan</groupId>
             <artifactId>cloud-api-commons</artifactId>
+           <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
