--- a/cloud-gateway-gateway9527/src/main/resources/application.yml
+++ b/cloud-gateway-gateway9527/src/main/resources/application.yml
@@ -13,13 +13,13 @@ spring:
         - id: payment_route # 路由的id,没有规定规则但要求唯一,建议配合服务名
           #匹配后提供服务的路由地址
           uri: http://localhost:8001
-          #uri: lb://cloud-payment-service
+          #uri: lb://cloud-payment-service  #动态路由
           predicates:
             - Path=/payment/** # 断言，路径相匹配的进行路由
 
         - id: payment_route2
           uri: http://localhost:8001
-          #uri: lb://cloud-payment-service
+          #uri: lb://cloud-payment-service  #动态路由
           predicates:
             - Path=/payment/lb/** #断言,路径相匹配的进行路由
            # - After=2020-03-12T15:44:15.064+08:00[Asia/Shanghai]
